package com.frostwizard4.Neutrino;

import net.minecraft.block.TrapdoorBlock;

public class GlassTrapDoor extends TrapdoorBlock {
    public GlassTrapDoor(Settings settings) {
        super(settings);
    }
}
