package com.frostwizard4.Neutrino.blocks;

import net.minecraft.block.DoorBlock;

public class GlassDoor extends DoorBlock {
    public GlassDoor(Settings settings) {
        super(settings);
    }
}
