@startuml

title __BLOCKS's Class Diagram__\n

  namespace com.frostwizard4.Neutrino {
    namespace blocks {
      class com.frostwizard4.Neutrino.blocks.CraftingSlab {
          {static} - title : Text
          + CraftingSlab()
          + onUse()
          - screen()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace blocks {
      class com.frostwizard4.Neutrino.blocks.CraftingSlabContainer {
          + CraftingSlabContainer()
          + canUse()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace blocks {
      class com.frostwizard4.Neutrino.blocks.DaturaFlower {
          + DaturaFlower()
          + onBreak()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace blocks {
      class com.frostwizard4.Neutrino.blocks.GlassDoor {
          + GlassDoor()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace blocks {
      class com.frostwizard4.Neutrino.blocks.GlassTrapDoor {
          + GlassTrapDoor()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace blocks {
      class com.frostwizard4.Neutrino.blocks.ScarecrowBlock {
          + ScarecrowBlock()
          + canPlaceAt()
          + getCollisionShape()
          + getCullingShape()
          + getOutlineShape()
          + onProjectileHit()
      }
    }
  }
  

  com.frostwizard4.Neutrino.blocks.CraftingSlab -up-|> net.minecraft.block.SlabBlock
  com.frostwizard4.Neutrino.blocks.CraftingSlabContainer -up-|> net.minecraft.screen.CraftingScreenHandler
  com.frostwizard4.Neutrino.blocks.DaturaFlower -up-|> net.minecraft.block.FlowerBlock
  com.frostwizard4.Neutrino.blocks.GlassDoor -up-|> net.minecraft.block.DoorBlock
  com.frostwizard4.Neutrino.blocks.GlassTrapDoor -up-|> net.minecraft.block.TrapdoorBlock
  com.frostwizard4.Neutrino.blocks.ScarecrowBlock -up-|> net.minecraft.block.Block


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
